<resources>
    <string name="app_name">자가진단 자동화</string>
    <string name="exe">실행</string>
    <string name="directLinkhint">바로가기 링크 주소</string>
    <string name="namehint">이름</string>
    <string name="pwdhint">인증번호</string>
    <string name="checkboxhint">바로가기 링크 사용</string>
    <string name="keystr">학교찾기 키워드</string>
    <string name="namestr">이름</string>
    <string name="birthstr">생년월일 6자리</string>
    <string name="schoolcheckboxtxt">학교정보 찾기</string>
    <string name="pNstr">입력</string>
    <string name="pasdfStr">번째를 선택</string>
</resources>
